Exercise 2 complete.